contact width overflow fix

--- a/style-about.css
+++ b/style-about.css
@@ -2,7 +2,6 @@
 *{
     margin: 0;
     padding: 0;
-    cursor: url('cursor.cur'), auto;
 }
 
 html{
@@ -347,6 +346,7 @@ form button{
     margin:0 auto;
     margin-bottom: 30px;
     overflow:scroll;
+    overflow-x:hidden;
 }
 
 .fill-form p{
