--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 *{
     margin: 0;
     padding: 0;
-    cursor: url('cursor.cur'), auto;
 }
 
 html{
